@@ -120,9 +120,9 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.mojo.webstart</groupId>
+				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>webstart-maven-plugin</artifactId>
-				<version>1.0-beta-2</version>
+				<version>1.0-beta-6</version>
 				<executions>
         			<execution>
 					<id>pack-jnlp</id>
@@ -220,7 +220,9 @@
 
 			       	<!-- BUILDING PROCESS -->
 		
+				<!--
 		        	<pack200>true</pack200>
+				-->
 		        	<!-- default force when pack200 false, true when pack200 selected ?? -->
 				<gzip>true</gzip> 
 		
