@@ -1,6 +1,9 @@
 Flukes Release Notes:
 ---------------------
 
+06/18/14:
+- Added TAMU, WSU, UMass, UAF and PSC
+
 03/31/14:
 - Added NCSU2 net
 
